--- a/Configs/pom.xml
+++ b/Configs/pom.xml
@@ -21,11 +21,11 @@
 	<!-- MODULES DENPENDENCY START -->
 	
         <dependency>
-            <groupId>com.eventoAS.services</groupId>
+            <groupId>com.eventoApp.services</groupId>
             <artifactId>services</artifactId>
             <version>${project.version}</version>
         </dependency>
-		
+
         <dependency>
             <groupId>com.eventoApp.models</groupId>
             <artifactId>models</artifactId>
