Fixed bug regarded to authentication process.

--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -15,7 +15,11 @@
 	
 	<dependencies>
 	<!-- MODULES DENPENDENCY START -->
-		
+		<dependency>
+			<groupId>com.eventoAS.configs</groupId>
+			<artifactId>configs</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	<!-- MODULES DENPENDENCY END -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
