--- a/Configs/pom.xml
+++ b/Configs/pom.xml
@@ -21,7 +21,7 @@
 	<!-- MODULES DENPENDENCY START -->
 	
         <dependency>
-            <groupId>com.eventoApp.services</groupId>
+            <groupId>com.eventoRS.services</groupId>
             <artifactId>services</artifactId>
             <version>${project.version}</version>
         </dependency>
